cabal-version:  1.12
name:           acmecli
version:        0.1.0.0
description:    Command-line interface for Let's Encrypt.
homepage:       https://github.com/mschristiansen/acmecli#readme
bug-reports:    https://github.com/mschristiansen/acmecli/issues
author:         Mikkel Christiansen
maintainer:     mikkel@rheosystems.com
copyright:      Rheo Systems (Pty) Ltd
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/mschristiansen/acme-tools/acmecli

library
  exposed-modules:
                  AcmeCli
                  AcmeCli.Files
  other-modules:
      Paths_acmecli
  hs-source-dirs:
      src
  build-depends: base >=4.7 && <5
               , directory
               , http-client-acme
  default-language: Haskell2010

executable acmecli
  main-is: Main.hs
  other-modules:
      Paths_acmecli
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: acmecli
               , base >=4.7 && <5
  default-language: Haskell2010

test-suite acmecli-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_acmecli
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      acmecli
    , base >=4.7 && <5
  default-language: Haskell2010
