cabal-version:  1.12
name:           acmetls
version:        0.1.0.0
description:    Command-line interface for Let's Encrypt.
homepage:       https://github.com/mschristiansen/acmetls#readme
bug-reports:    https://github.com/mschristiansen/acmetls/issues
author:         Mikkel Christiansen
maintainer:     mikkel@rheosystems.com
copyright:      Rheo Systems (Pty) Ltd
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/mschristiansen/acme-tools/acmetls

library
  exposed-modules:
                  AcmeTls
                  AcmeTls.Files
  other-modules:
      Paths_acmetls
  hs-source-dirs:
      src
  build-depends: base >=4.7 && <5
               , directory
               , http-client-acme
               , optparse-applicative
               , pem
  default-language: Haskell2010

executable acmetls
  main-is: Main.hs
  other-modules:
      Paths_acmetls
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: acmetls
               , base >=4.7 && <5
  default-language: Haskell2010

test-suite acmetls-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_acmetls
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      acmetls
    , base >=4.7 && <5
  default-language: Haskell2010
