cabal-version:  1.12
name:           server-example
version:        0.1.0.0
description:    Example showing wai application with ACME middleware
homepage:       https://github.com/mschristiansen/acme-tools#readme
bug-reports:    https://github.com/mschristiansen/acme-tools/issues
author:         Mikkel Christiansen
maintainer:     mikkel@rheosystems.com
copyright:      Rheo Systems (Pty) Ltd
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/mschristiansen/acme-tools/server-example

executable server-example-exe
  main-is: Main.hs
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base >=4.7 && <5
               , http-types
               , wai
               , wai-middleware-acme
               , warp
               , warp-tls
  default-language: Haskell2010
