cabal-version: 1.12
name:           wai-middleware-acme
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/mschristiansen/wai-middleware-acme#readme>
homepage:       https://github.com/mschristiansen/wai-middleware-acme#readme
bug-reports:    https://github.com/mschristiansen/wai-middleware-acme/issues
author:         Mikkel Christiansen
maintainer:     mikkel@rheosystems.com
copyright:      Rheo Systems (Pty) Ltd
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/mschristiansen/wai-middleware-acme

library
  exposed-modules:
      Network.Wai.Middleware.ACME
  other-modules:
      Paths_wai_middleware_acme
  hs-source-dirs:
      src
  build-depends:   base >=4.7 && <5
                 , http-client-acme
                 , http-types
                 , wai
  default-language: Haskell2010

test-suite wai-middleware-acme-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Network.Wai.Middleware.ACMESpec
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base >=4.7 && <5
               , hspec
               , wai
               , wai-middleware-acme
  default-language: Haskell2010
